Changed GC to G1