@@ -39,7 +39,7 @@ application {
 			"-Xms512M",
 			"-Xmx4G",
 			"-XX:MaxDirectMemorySize=2G",
-			"-XX:+UseZGC",
+			"-XX:+UseG1GC",
 			"-XX:+HeapDumpOnOutOfMemoryError",
 			"-XX:HeapDumpPath=logs/memdump.hprof",
 			"-Dfile.encoding=UTF-8",
